# cv

./: .gitignore  CHANGELOG.md  Makefile  README.md  cv.html  cv.yaml  full-experience.md  pyproject.toml  render.py
.github/workflows/: build.yaml
css/: light.css  styles.css
etc/: dark.css  light.css  night.css  palletes.css  sizzle.css  styles.css
etc/css/: bold.css  light.css  styles.css
etc/css/letter/: styles.css
etc/css/resume/: styles.css
etc/example_letters/: manager1.md
src/app/: __init__.py  build.py  config.py  constants.py  letter.py  logging.py  main.py  render.py  resume.py  watch.py
src/cv/: build.py  constants.py  main.py  markdown.py  schemas.py  watch.py
static/: cv.json
static/css/: blue.css  bold.css  large.css  light.css  main.css  medium.css  night.css  small.css  styles.css  switchers.css
static/css/colors/: blue.css  bold.css  light.css  night.css
static/css/formats/: fancy.css  plain.css
static/css/sizes/: large.css  medium.css  small.css
static/js/: build-fancy.js  build-plain.js  build.js  main.js  switchers.js  theme-switcher.js  tools.js
