[project]
name = "cv"
version = "5.2.0"
description = "Tools for building career documents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "auto-name-enum>=2.0.0",
    "loguru>=0.7.3",
    "markdown>=3.7",
    "typer>=0.13.0",
    "watchfiles>=1.0.4",
]

[tool.uv]
package = true


[dependency-groups]
dev = [
    "ipython>=9.0.1",
    "pyclean>=3.1.0",
]

[project.scripts]
cv = "app.main:cli"
